# code-insult

./: .gitignore  CodeInsult.py  LICENSE  pyproject.toml
codeinsult/: CodeInsult.py  __init__.py  __version__.py  config.py
codeinsult/messages/: __init__.py  base.py  pt_br.py  registry.py
docs/: README.md  README.pt.md
messages/: __init__.py  base.py  pt_br.py  registry.py
tests/: conftest.py  test_codeinsult.py  test_config.py  test_messages_base.py  test_registry.py  test_version.py
