[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=80",
]

[project]
name = "codeinsult"
description = "Turn HTTP errors into laughter — funny, sarcastic & offensive messages for every status code."

readme = "docs/README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
    { name = "Vaz15k" },
]

requires-python = ">=3.11"
dynamic = ["version"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

optional-dependencies.dev = [
    "pytest",
    "ruff"
]

urls.Source = "https://github.com/Vaz15k/code-insult"
urls.Tracker = "https://github.com/Vaz15k/code-insult/issues"

[tool.setuptools.dynamic]
version = {attr = "codeinsult.__version__.__version__"}
